[project]
name = "think-tokens"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dataclasses>=0.8",
    "datasets>=3.6.0",
    "eindex-callum>=0.1.2",
    "huggingface>=0.0.1",
    "matplotlib>=3.10.3",
    "plotly-express>=0.4.1",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
    "transformers>=4.52.4",
    "wandb>=0.20.1",
]
